--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@ setTimeout(function(){
 <body>
 Kalo ada yang mau buat klik link dibawah ini
 <br>
-<a href="daftar">https://www.coinimp.com/invite/66ebed46-cc67-4005-b71d-8d9c0f197fc9</a>
+<a href="https://www.coinimp.com/invite/66ebed46-cc67-4005-b71d-8d9c0f197fc9">daftar klik di sini</a>
 </body>
 </html>
