--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@ setTimeout(function(){
 Kalo ada yang mau buat klik link dibawah ini
 <br>
 <a href="https://www.coinimp.com/invite/66ebed46-cc67-4005-b71d-8d9c0f197fc9">daftar klik di sini</a>
+<a href="https://mega.nz/file/Dtxw1BYJ#yOdIeX1FeU74oZr5aMapFoamwLjfosKGLKSH7F0rkKU">wgloia vid 1</a>
+<a href="https://mega.nz/file/j5pGgRaC#rlVhtHDesokIjkyy4TrDp9zob4mPqEMpnChIG2ruCKg">wgloia vid 2</a>
+<a href="https://mega.nz/file/booCiL5b#t9joqzLq-UuWIdDObLeXDoa-PuJWfjl-yOBvZyfOEVs">wgloia vid 3</a>
+<a href="https://mega.nz/file/mwoA3JLB#osFEya_PazdnGdhzAQKCMjubxl4i5UX8k3wzbijnqds">wgloia vid 4</a>
 </body>
 </html>
