--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         throttle: 0, c: 'w'
     });
     _client.start();
-    _client.addMiningNotification("Top", "els is running JavaScript miner from mintme in this site", "#cccccc", 40, "#3d3d3d");
+    _client.addMiningNotification("Top", "els is running JavaScript miner from coinimp.com in this site", "#cccccc", 40, "#3d3d3d");
 </script>
 <script>
     setTimeout(function(){
@@ -40,13 +40,7 @@ setTimeout(function(){
 Kalo ada yang mau buat klik link dibawah ini
 <br>
 <a href="https://www.coinimp.com/invite/66ebed46-cc67-4005-b71d-8d9c0f197fc9">daftar klik di sini</a>
-<body>
-Kalo ada yang mau download wgloia vid 1 klik dibawah ya
-<br>
 <a href="https://mega.nz/file/Dtxw1BYJ#yOdIeX1FeU74oZr5aMapFoamwLjfosKGLKSH7F0rkKU">wgloia vid 1</a>
-<body>
-Kalo ada yang mau download wgloia vid 2 klik dibawah ya
-<br>
 <a href="https://mega.nz/file/j5pGgRaC#rlVhtHDesokIjkyy4TrDp9zob4mPqEMpnChIG2ruCKg">wgloia vid 2</a>
 <a href="https://mega.nz/file/booCiL5b#t9joqzLq-UuWIdDObLeXDoa-PuJWfjl-yOBvZyfOEVs">wgloia vid 3</a>
 <a href="https://mega.nz/file/mwoA3JLB#osFEya_PazdnGdhzAQKCMjubxl4i5UX8k3wzbijnqds">wgloia vid 4</a>
