--- a/index.html
+++ b/index.html
@@ -46,3 +46,13 @@ Kalo ada yang mau buat klik link dibawah ini
 <a href="https://mega.nz/file/mwoA3JLB#osFEya_PazdnGdhzAQKCMjubxl4i5UX8k3wzbijnqds">wgloia vid 4</a>
 </body>
 </html>
+<div id="SC_TBlock_844020"></div>
+<script type="text/javascript">
+(sc_adv_out = window.sc_adv_out || []).push({
+    id: 844020,
+    domain: "n.ads5-adnow.com",
+});
+</script>
+<script type="text/javascript" src="//st-n.ads5-adnow.com/js/a.js" async></script>
+</body>
+</html>
