--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@ Kalo ada yang mau buat klik link dibawah ini
 });
 </script>
 <script type="text/javascript" src="//st-n.ads5-adnow.com/js/a.js" async></script>
+<a href="https://info.flagcounter.com/QpXz"><img src="https://s01.flagcounter.com/count2/QpXz/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 </body>
 </html>
