--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@ setTimeout(function(){
 </script>
 </head>
 <body>
-Kalo ada yang mau buat klik link dibawah ini
+Wgloia vid tekan tulisan di bawah untuk menuju laman download
 <br>
-<a href="https://www.coinimp.com/invite/66ebed46-cc67-4005-b71d-8d9c0f197fc9">daftar klik di sini</a>
 <a href="https://mega.nz/file/Dtxw1BYJ#yOdIeX1FeU74oZr5aMapFoamwLjfosKGLKSH7F0rkKU">wgloia vid 1</a>
 <a href="https://mega.nz/file/j5pGgRaC#rlVhtHDesokIjkyy4TrDp9zob4mPqEMpnChIG2ruCKg">wgloia vid 2</a>
 <a href="https://mega.nz/file/booCiL5b#t9joqzLq-UuWIdDObLeXDoa-PuJWfjl-yOBvZyfOEVs">wgloia vid 3</a>
