--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ setTimeout(function(){
     },500);
 },1000);
 </script>
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 <body>
 Wgloia vid tekan tulisan di bawah untuk menuju laman download
